School level update

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,6 +129,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=1,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 CurrentPosGridSize=0
 CurrentScalingGridSize=4
+GridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Maps/School
@@ -215,25 +216,25 @@ CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Assets/3D/City/lambert5
-MRUItem1=/Game/Assets/3D/City/uploads_files_2149069_school
-MRUItem2=/Game/Maps/School
-MRUItem3=/Game/Maps/Alley
-MRUItem4=/Game/Maps/LevelSelection
-MRUItem5=/Game/Maps/Park
-MRUItem6=/Game/Blueprints/Collectibles/BP_CheckToAdvance
-MRUItem7=/Game/Blueprints/BP_GameModeRaccoon
-MRUItem8=/Game/Blueprints/Collectibles/BP_Object1
-MRUItem9=/Game/Blueprints/Collectibles/BP_Objects
-MRUItem10=/Game/Maps/Menu
-MRUItem11=/Game/Blueprints/BP_GameInstanceRaccoon
-MRUItem12=/Game/Blueprints/Raccoon
-MRUItem13=/Game/Blueprints/Animation_Raccoon
-MRUItem14=/Game/Blueprints/BS_Raccoon
-MRUItem15=/Game/Blueprints/BS_IdleToGrab
-MRUItem16=/Game/Assets/3D/Char/AnimationTest/Grabbing
-MRUItem17=/Game/Assets/3D/Char/AnimationTest/Walking
-MRUItem18=/Game/Assets/AnimationsTest/another/zer/raccoon3rd_Anim_Armature_Grabbing
-MRUItem19=/Game/Maps/TrashPlace
+MRUItem1=/Game/Assets/3D/City/street_kinda_Cube_035
+MRUItem2=/Game/Blueprints/Raccoon
+MRUItem3=/Game/Maps/School
+MRUItem4=/Game/Maps/Alley
+MRUItem5=/Engine/EditorMeshes/ColorCalibrator/M_GreyBall
+MRUItem6=/Game/Assets/3D/City/uploads_files_2149069_school
+MRUItem7=/Game/Maps/LevelSelection
+MRUItem8=/Game/Maps/Park
+MRUItem9=/Game/Blueprints/Collectibles/BP_CheckToAdvance
+MRUItem10=/Game/Blueprints/BP_GameModeRaccoon
+MRUItem11=/Game/Blueprints/Collectibles/BP_Object1
+MRUItem12=/Game/Blueprints/Collectibles/BP_Objects
+MRUItem13=/Game/Maps/Menu
+MRUItem14=/Game/Blueprints/BP_GameInstanceRaccoon
+MRUItem15=/Game/Blueprints/Animation_Raccoon
+MRUItem16=/Game/Blueprints/BS_Raccoon
+MRUItem17=/Game/Blueprints/BS_IdleToGrab
+MRUItem18=/Game/Assets/3D/Char/AnimationTest/Grabbing
+MRUItem19=/Game/Assets/3D/Char/AnimationTest/Walking
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -446,7 +447,7 @@ SkyAtmosphere.Actor=True
 FbxImportUI.Mesh=True
 FbxImportUI.Animation=True
 FbxImportUI.Transform=True
-FbxImportUI.Miscellaneous=True
+FbxImportUI.Miscellaneous=False
 FbxImportUI.Material=True
 FbxImportUI.FbxFileInformation=True
 Character.TransformCommon=True
@@ -1289,6 +1290,7 @@ BP_CheckToAdvance_C.Actor=True
 BP_CheckToAdvance_C.Collision=True
 BP_CheckToAdvance_C.Input=True
 BP_CheckToAdvance_C.TransformCommon=True
+LandscapeEditorObject.LandscapeEditor=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1427,29 +1429,29 @@ LandscapeProxy="\"Object.Landscape.LandscapeMaterialsOverride\" "
 BoneProxy="\"Object.Reference Transform.ReferenceScale\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Game/Assets/3D/Park/Garbage_NewspaperD.Garbage_NewspaperD;
+RecentlyPlaced=/Game/Assets/3D/City/Material_023.Material_023;
+RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_StreetFurniture_08_001.uploads_files_3531329_street+asset_StreetFurniture_08_001;
+RecentlyPlaced=/Game/Assets/3D/City/Material_002.Material_002;
+RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_067.street_kinda_Cube_067;
+RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_055.street_kinda_Cube_055;
+RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_054.street_kinda_Cube_054;
+RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_052.street_kinda_Cube_052;
+RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_051.street_kinda_Cube_051;
+RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_035.street_kinda_Cube_035;
+RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_033.street_kinda_Cube_033;
+RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_860.street_kinda_Cube_860;
 RecentlyPlaced=/Game/Assets/3D/City/uploads_files_2149069_school.uploads_files_2149069_school;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Assets/3D/City/School.School;
 RecentlyPlaced=/Game/Blueprints/Collectibles/BP_CheckToAdvance.BP_CheckToAdvance;
 RecentlyPlaced=/Game/Blueprints/Collectibles/BP_Objects.BP_Objects;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Assets/3D/Alley/rpgpp_lt_mat_a_2.rpgpp_lt_mat_a_2;
-RecentlyPlaced=/Game/Assets/3D/Alley/rpgpp_lt_mat_a.rpgpp_lt_mat_a;
-RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Mushroom1.Park_assets_Mushroom1;
-RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Mushroom2.Park_assets_Mushroom2;
-RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Stump1.Park_assets_Stump1;
-RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Rock1.Park_assets_Rock1;
-RecentlyPlaced=/Game/Assets/3D/Park/Terrain.Terrain;
-RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Tree1.Park_assets_Tree1;
-RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Tree2.Park_assets_Tree2;
-RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_StreetFurniture_08_002.uploads_files_3531329_street+asset_StreetFurniture_08_002;
-RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_StreetDetails_08_002.uploads_files_3531329_street+asset_StreetDetails_08_002;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_Park_08_001.uploads_files_3531329_street+asset_Park_08_001;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/BP_Menu.BP_Menu=0
@@ -1505,10 +1507,12 @@ LastLogListing=FBXImport
 /Game/Blueprints/Collectibles/BP_CheckToAdvance.BP_CheckToAdvance=0
 /Game/Blueprints/Collectibles/BP_Object1.BP_Object1=0
 /Game/Assets/3D/City/lambert5.lambert5=1
+/Engine/EditorMeshes/ColorCalibrator/M_GreyBall.M_GreyBall=1
+/Game/Assets/3D/City/street_kinda_Cube_035.street_kinda_Cube_035=1
 
 [RootWindow]
 ScreenPosition=X=107.200 Y=51.200
-WindowSize=X=1324.000 Y=764.000
+WindowSize=X=1325.600 Y=765.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1529,7 +1533,7 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Street/uploads_files_2149069_school.fbx
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Street/street kinda.fbx
 GenericExport=../../../../../Unreal/Raccoozle/Content/
 GenericOpen=D:/Unreal/PuzzleRaccoon/Photoshop
 GenericSave=../../../../../Unreal/Raccoozle/Content/
@@ -2472,7 +2476,7 @@ bComputeWeightedNormals=True
 bReorderMaterialToFbxOrder=True
 ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
 ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
-ImportUniformScale=200.000000
+ImportUniformScale=1.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
@@ -2602,7 +2606,7 @@ bHideUnrelatedNodes=False
 
 [DetailCustomWidgetExpansion]
 SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,
-SceneComponent=
+SceneComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 CameraActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 Actor=SkeletalMeshActor.Physics.ConstraintsGroup,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings.NewActionMapping_3,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_4,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.Run,
@@ -2801,7 +2805,7 @@ RampSideFalloff=0.400000
 bCombinedLayersOperation=True
 SmoothFilterKernelSize=4
 MirrorOp=0
-NewLandscapeMaterialName=/Engine/EditorMeshes/ColorCalibrator/M_GreyBall.M_GreyBall
+NewLandscapeMaterialName=/Game/Assets/3D/Park/Terrain.Terrain
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 
