School map update

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -22,7 +22,6 @@ PreviewPlatformName=None
 PreviewShaderFormatName=None
 bPreviewFeatureLevelActive=False
 PreviewDeviceProfileName=None
-bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowWidth=1910
@@ -179,7 +178,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Assets/3D/City
+ContentBrowserTab1.SelectedPaths=/Game/Assets/3D/Park/Import
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -213,28 +212,30 @@ LastLevel=/Game/Maps/School
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Assets/3D/City/House_Materials/Third/Material_003.Material_003
+OpenAssetsAtExit=/Game/Assets/3D/City/House_Materials/Third/Material_001.Material_001
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/3D/City/lambert5
-MRUItem1=/Game/Assets/3D/City/street_kinda_Cube_035
-MRUItem2=/Game/Blueprints/Raccoon
-MRUItem3=/Game/Maps/School
-MRUItem4=/Game/Maps/Alley
-MRUItem5=/Engine/EditorMeshes/ColorCalibrator/M_GreyBall
-MRUItem6=/Game/Assets/3D/City/uploads_files_2149069_school
-MRUItem7=/Game/Maps/LevelSelection
-MRUItem8=/Game/Maps/Park
-MRUItem9=/Game/Blueprints/Collectibles/BP_CheckToAdvance
-MRUItem10=/Game/Blueprints/BP_GameModeRaccoon
-MRUItem11=/Game/Blueprints/Collectibles/BP_Object1
-MRUItem12=/Game/Blueprints/Collectibles/BP_Objects
-MRUItem13=/Game/Maps/Menu
-MRUItem14=/Game/Blueprints/BP_GameInstanceRaccoon
-MRUItem15=/Game/Blueprints/Animation_Raccoon
-MRUItem16=/Game/Blueprints/BS_Raccoon
-MRUItem17=/Game/Blueprints/BS_IdleToGrab
-MRUItem18=/Game/Assets/3D/Char/AnimationTest/Grabbing
-MRUItem19=/Game/Assets/3D/Char/AnimationTest/Walking
+MRUItem0=/Game/Assets/3D/City/House_Materials/Third/Material_001
+MRUItem1=/Game/Assets/3D/City/House_Materials/Third/Material_003
+MRUItem2=/Game/Assets/3D/City/House_Materials/Third/Material_006
+MRUItem3=/Game/Assets/3D/City/House_Materials/Second/Material_001
+MRUItem4=/Game/Assets/3D/City/House_Materials/Second/Material_006
+MRUItem5=/Game/Assets/3D/City/House_Materials/Second/Material_003
+MRUItem6=/Game/Assets/3D/City/House_Materials/Second/Material_022
+MRUItem7=/Game/Assets/3D/City/base
+MRUItem8=/Game/Maps/School
+MRUItem9=/Game/Assets/3D/City/lambert5
+MRUItem10=/Game/Assets/3D/City/street_kinda_Cube_035
+MRUItem11=/Game/Blueprints/Raccoon
+MRUItem12=/Game/Maps/Alley
+MRUItem13=/Engine/EditorMeshes/ColorCalibrator/M_GreyBall
+MRUItem14=/Game/Assets/3D/City/uploads_files_2149069_school
+MRUItem15=/Game/Maps/LevelSelection
+MRUItem16=/Game/Maps/Park
+MRUItem17=/Game/Blueprints/Collectibles/BP_CheckToAdvance
+MRUItem18=/Game/Blueprints/BP_GameModeRaccoon
+MRUItem19=/Game/Blueprints/Collectibles/BP_Object1
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1430,6 +1431,12 @@ BoneProxy="\"Object.Reference Transform.ReferenceScale\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/Assets/3D/Park/Import/Mushroom4_2.Mushroom4_2;
+RecentlyPlaced=/Game/Assets/3D/Park/Import/Mushroom3_1.Mushroom3_1;
+RecentlyPlaced=/Game/Assets/3D/Park/Import/Mushroom3_2.Mushroom3_2;
+RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Tree2.Park_assets_Tree2;
+RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Tree1.Park_assets_Tree1;
+RecentlyPlaced=/Game/Assets/3D/City/house.house;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Assets/3D/Park/Garbage_NewspaperD.Garbage_NewspaperD;
 RecentlyPlaced=/Game/Assets/3D/City/Material_023.Material_023;
@@ -1443,15 +1450,9 @@ RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_051.street_kinda_Cube_051;
 RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_035.street_kinda_Cube_035;
 RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_033.street_kinda_Cube_033;
 RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_860.street_kinda_Cube_860;
-RecentlyPlaced=/Game/Assets/3D/City/uploads_files_2149069_school.uploads_files_2149069_school;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Game/Assets/3D/City/School.School;
-RecentlyPlaced=/Game/Blueprints/Collectibles/BP_CheckToAdvance.BP_CheckToAdvance;
-RecentlyPlaced=/Game/Blueprints/Collectibles/BP_Objects.BP_Objects;
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/BP_Menu.BP_Menu=0
@@ -1509,10 +1510,15 @@ LastLogListing=PIE
 /Game/Assets/3D/City/lambert5.lambert5=1
 /Engine/EditorMeshes/ColorCalibrator/M_GreyBall.M_GreyBall=1
 /Game/Assets/3D/City/street_kinda_Cube_035.street_kinda_Cube_035=1
+/Game/Assets/3D/City/base.base=1
+/Game/Assets/3D/City/House_Materials/Second/Material_003.Material_003=1
+/Game/Assets/3D/City/House_Materials/Second/Material_006.Material_006=1
+/Game/Assets/3D/City/House_Materials/Second/Material_001.Material_001=1
+/Game/Assets/3D/City/House_Materials/Third/Material_006.Material_006=1
 
 [RootWindow]
 ScreenPosition=X=107.200 Y=51.200
-WindowSize=X=1325.600 Y=765.600
+WindowSize=X=1327.200 Y=767.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1533,7 +1539,7 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Street/street kinda.fbx
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Street/house.fbx
 GenericExport=../../../../../Unreal/Raccoozle/Content/
 GenericOpen=D:/Unreal/PuzzleRaccoon/Photoshop
 GenericSave=../../../../../Unreal/Raccoozle/Content/
@@ -2606,7 +2612,7 @@ bHideUnrelatedNodes=False
 
 [DetailCustomWidgetExpansion]
 SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,
-SceneComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
+SceneComponent=
 CameraActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 Actor=SkeletalMeshActor.Physics.ConstraintsGroup,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings.NewActionMapping_3,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_4,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.Run,
@@ -2683,8 +2689,8 @@ Raccoon_C=
 PlayerStart=SkeletalMeshActor.Physics.ConstraintsGroup,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 BP_Sky_Sphere_C=SkeletalMeshActor.Physics.ConstraintsGroup,
-PrimitiveComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
-BrushComponent=
+PrimitiveComponent=
+BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 Brush=SkeletalMeshActor.Physics.ConstraintsGroup,
 Landscape=SkeletalMeshActor.Physics.ConstraintsGroup,
@@ -2721,6 +2727,7 @@ LevelSequenceEditorSettings=True
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
@@ -2789,7 +2796,7 @@ Value=1.000000
 DisplayedStatsPageName=PrimitiveStats
 
 [LandscapeEdit]
-ToolStrength=0.338095
+ToolStrength=0.094285
 BrushRadius=325.739655
 BrushFalloff=0.164762
 AlphaBrushAutoRotate=True
@@ -2805,7 +2812,7 @@ RampSideFalloff=0.400000
 bCombinedLayersOperation=True
 SmoothFilterKernelSize=4
 MirrorOp=0
-NewLandscapeMaterialName=/Game/Assets/3D/Park/Terrain.Terrain
+NewLandscapeMaterialName=/Game/StarterContent/Materials/M_Concrete_Poured.M_Concrete_Poured
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 
