School map ended, street map started

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,14 +131,14 @@ CurrentScalingGridSize=4
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Maps/School
-MRUItem1=/Game/Maps/Alley
-MRUItem2=/Game/Maps/LevelSelection
+MRUItem0=/Game/Maps/Street
+MRUItem1=/Game/Maps/School
+MRUItem2=/Game/Maps/Hospital
 MRUItem3=/Game/Maps/Park
-MRUItem4=/Game/Maps/Menu
-MRUItem5=/Game/Maps/TrashPlace
-MRUItem6=/Game/Maps/Hospital
-MRUItem7=/Game/Maps/Street
+MRUItem4=/Game/Maps/Alley
+MRUItem5=/Game/Maps/LevelSelection
+MRUItem6=/Game/Maps/Menu
+MRUItem7=/Game/Maps/TrashPlace
 MRUItem8=/Game/ThirdPersonBP/Menu
 MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
@@ -178,7 +178,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Assets/3D/Park/Import
+ContentBrowserTab1.SelectedPaths=/Game/Assets/3D/Street
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -208,34 +208,32 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Maps/School
+LastLevel=/Game/Maps/Street
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Assets/3D/City/House_Materials/Third/Material_003.Material_003
-OpenAssetsAtExit=/Game/Assets/3D/City/House_Materials/Third/Material_001.Material_001
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/3D/City/House_Materials/Third/Material_001
-MRUItem1=/Game/Assets/3D/City/House_Materials/Third/Material_003
-MRUItem2=/Game/Assets/3D/City/House_Materials/Third/Material_006
-MRUItem3=/Game/Assets/3D/City/House_Materials/Second/Material_001
-MRUItem4=/Game/Assets/3D/City/House_Materials/Second/Material_006
-MRUItem5=/Game/Assets/3D/City/House_Materials/Second/Material_003
-MRUItem6=/Game/Assets/3D/City/House_Materials/Second/Material_022
-MRUItem7=/Game/Assets/3D/City/base
-MRUItem8=/Game/Maps/School
-MRUItem9=/Game/Assets/3D/City/lambert5
-MRUItem10=/Game/Assets/3D/City/street_kinda_Cube_035
-MRUItem11=/Game/Blueprints/Raccoon
-MRUItem12=/Game/Maps/Alley
-MRUItem13=/Engine/EditorMeshes/ColorCalibrator/M_GreyBall
-MRUItem14=/Game/Assets/3D/City/uploads_files_2149069_school
-MRUItem15=/Game/Maps/LevelSelection
-MRUItem16=/Game/Maps/Park
-MRUItem17=/Game/Blueprints/Collectibles/BP_CheckToAdvance
-MRUItem18=/Game/Blueprints/BP_GameModeRaccoon
-MRUItem19=/Game/Blueprints/Collectibles/BP_Object1
+MRUItem0=/Game/Assets/3D/City/street_kinda_Cube_051
+MRUItem1=/Game/Assets/3D/City/street_kinda_Cube_035
+MRUItem2=/Game/Assets/3D/City/street_kinda_Cube_055
+MRUItem3=/Game/Assets/3D/City/street_kinda_Cube_052
+MRUItem4=/Game/Assets/3D/City/street_kinda_Cube_054
+MRUItem5=/Game/Maps/Street
+MRUItem6=/Game/Maps/School
+MRUItem7=/Game/Maps/Hospital
+MRUItem8=/Game/Assets/3D/City/Sidewalk/Material_033
+MRUItem9=/Game/Assets/3D/City/Sidewalk/side_walk_thingy
+MRUItem10=/Game/Maps/Park
+MRUItem11=/Game/Assets/3D/City/lambert5
+MRUItem12=/Game/Assets/3D/City/House_Materials/Third/Material_001
+MRUItem13=/Game/Assets/3D/City/House_Materials/Third/Material_003
+MRUItem14=/Game/Assets/3D/City/House_Materials/Third/Material_006
+MRUItem15=/Game/Assets/3D/City/House_Materials/Second/Material_001
+MRUItem16=/Game/Assets/3D/City/House_Materials/Second/Material_006
+MRUItem17=/Game/Assets/3D/City/House_Materials/Second/Material_003
+MRUItem18=/Game/Assets/3D/City/House_Materials/Second/Material_022
+MRUItem19=/Game/Assets/3D/City/base
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1430,26 +1428,26 @@ LandscapeProxy="\"Object.Landscape.LandscapeMaterialsOverride\" "
 BoneProxy="\"Object.Reference Transform.ReferenceScale\" "
 
 [PlacementMode]
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/Assets/3D/Park/Import/Mushroom4_2.Mushroom4_2;
-RecentlyPlaced=/Game/Assets/3D/Park/Import/Mushroom3_1.Mushroom3_1;
-RecentlyPlaced=/Game/Assets/3D/Park/Import/Mushroom3_2.Mushroom3_2;
-RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Tree2.Park_assets_Tree2;
-RecentlyPlaced=/Game/Assets/3D/Park/Import/Park_assets_Tree1.Park_assets_Tree1;
-RecentlyPlaced=/Game/Assets/3D/City/house.house;
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/Assets/3D/Park/Garbage_NewspaperD.Garbage_NewspaperD;
-RecentlyPlaced=/Game/Assets/3D/City/Material_023.Material_023;
-RecentlyPlaced=/Game/Assets/3D/Park/uploads_files_3531329_street+asset_StreetFurniture_08_001.uploads_files_3531329_street+asset_StreetFurniture_08_001;
-RecentlyPlaced=/Game/Assets/3D/City/Material_002.Material_002;
-RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_067.street_kinda_Cube_067;
-RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_055.street_kinda_Cube_055;
-RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_054.street_kinda_Cube_054;
-RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_052.street_kinda_Cube_052;
-RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_051.street_kinda_Cube_051;
-RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_035.street_kinda_Cube_035;
-RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_033.street_kinda_Cube_033;
-RecentlyPlaced=/Game/Assets/3D/City/street_kinda_Cube_860.street_kinda_Cube_860;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_3.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_3;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_2;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2_3.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2_3;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2_2;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_1_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_1_2;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_7.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_7;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_6.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_6;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_5.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_5;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_1.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_1;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_3_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_3_2;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_2_3.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_2_3;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_2_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_2_2;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_1_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_1_2;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_21.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_21;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_20.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_20;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_19.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_19;
+RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_18.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_18;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1515,10 +1513,16 @@ LastLogListing=FBXImport
 /Game/Assets/3D/City/House_Materials/Second/Material_006.Material_006=1
 /Game/Assets/3D/City/House_Materials/Second/Material_001.Material_001=1
 /Game/Assets/3D/City/House_Materials/Third/Material_006.Material_006=1
+/Game/Assets/3D/City/Sidewalk/side_walk_thingy.side_walk_thingy=1
+/Game/Assets/3D/City/Sidewalk/Material_033.Material_033=1
+/Game/Assets/3D/City/street_kinda_Cube_054.street_kinda_Cube_054=1
+/Game/Assets/3D/City/street_kinda_Cube_052.street_kinda_Cube_052=1
+/Game/Assets/3D/City/street_kinda_Cube_055.street_kinda_Cube_055=1
+/Game/Assets/3D/City/street_kinda_Cube_051.street_kinda_Cube_051=1
 
 [RootWindow]
 ScreenPosition=X=107.200 Y=51.200
-WindowSize=X=1327.200 Y=767.200
+WindowSize=X=1328.800 Y=768.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1539,7 +1543,7 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Street/house.fbx
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Street/uploads_files_1859787_Cartoon_Lowpoly_Car (1).fbx
 GenericExport=../../../../../Unreal/Raccoozle/Content/
 GenericOpen=D:/Unreal/PuzzleRaccoon/Photoshop
 GenericSave=../../../../../Unreal/Raccoozle/Content/
@@ -2684,13 +2688,13 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bi
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings.NewActionMapping_3,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_4,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.Run,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings.NewActionMapping_3,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_4,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.Run,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings.NewActionMapping_3,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_4,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.Run,
-CapsuleComponent=
+CapsuleComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 Raccoon_C=
 PlayerStart=SkeletalMeshActor.Physics.ConstraintsGroup,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 BP_Sky_Sphere_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 PrimitiveComponent=
-BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
+BrushComponent=
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 Brush=SkeletalMeshActor.Physics.ConstraintsGroup,
 Landscape=SkeletalMeshActor.Physics.ConstraintsGroup,
@@ -2796,7 +2800,7 @@ Value=1.000000
 DisplayedStatsPageName=PrimitiveStats
 
 [LandscapeEdit]
-ToolStrength=0.094285
+ToolStrength=0.124762
 BrushRadius=325.739655
 BrushFalloff=0.164762
 AlphaBrushAutoRotate=True
@@ -2812,7 +2816,7 @@ RampSideFalloff=0.400000
 bCombinedLayersOperation=True
 SmoothFilterKernelSize=4
 MirrorOp=0
-NewLandscapeMaterialName=/Game/StarterContent/Materials/M_Concrete_Poured.M_Concrete_Poured
+NewLandscapeMaterialName=/Game/Assets/3D/City/Material_023.Material_023
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 
